src/util/ConfigManager/generated/ConfigShorthandParser.cpp

// Generated from ConfigShorthand.g4 by ANTLR 4.13.0



#include "ConfigShorthandParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ConfigShorthandParserStaticData final {
  ConfigShorthandParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ConfigShorthandParserStaticData(const ConfigShorthandParserStaticData&) = delete;
  ConfigShorthandParserStaticData(ConfigShorthandParserStaticData&&) = delete;
  ConfigShorthandParserStaticData& operator=(const ConfigShorthandParserStaticData&) = delete;
  ConfigShorthandParserStaticData& operator=(ConfigShorthandParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag configshorthandParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ConfigShorthandParserStaticData *configshorthandParserStaticData = nullptr;

void configshorthandParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (configshorthandParserStaticData != nullptr) {
    return;
  }
#else
  assert(configshorthandParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ConfigShorthandParserStaticData>(
    std::vector<std::string>{
      "shortHandString", "assignments", "assignment", "object", "list", 
      "content"
    },
    std::vector<std::string>{
      "", "','", "':'", "'{'", "'}'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "LITERAL", "BOOL", "INTEGER", "FLOAT", 
      "STRING", "NAME", "WHITESPACE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  configshorthandParserStaticData = staticData.release();
}

}

ConfigShorthandParser::ConfigShorthandParser(TokenStream *input) : ConfigShorthandParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ConfigShorthandParser::ConfigShorthandParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ConfigShorthandParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *configshorthandParserStaticData->atn, configshorthandParserStaticData->decisionToDFA, configshorthandParserStaticData->sharedContextCache, options);
}

ConfigShorthandParser::~ConfigShorthandParser() {
  delete _interpreter;
}

const atn::ATN& ConfigShorthandParser::getATN() const {
  return *configshorthandParserStaticData->atn;
}

std::string ConfigShorthandParser::getGrammarFileName() const {
  return "ConfigShorthand.g4";
}

const std::vector<std::string>& ConfigShorthandParser::getRuleNames() const {
  return configshorthandParserStaticData->ruleNames;
}

const dfa::Vocabulary& ConfigShorthandParser::getVocabulary() const {
  return configshorthandParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ConfigShorthandParser::getSerializedATN() const {
  return configshorthandParserStaticData->serializedATN;
}


//----------------- ShortHandStringContext ------------------------------------------------------------------

ConfigShorthandParser::ShortHandStringContext::ShortHandStringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConfigShorthandParser::AssignmentsContext* ConfigShorthandParser::ShortHandStringContext::assignments() {
  return getRuleContext<ConfigShorthandParser::AssignmentsContext>(0);
}

tree::TerminalNode* ConfigShorthandParser::ShortHandStringContext::EOF() {
  return getToken(ConfigShorthandParser::EOF, 0);
}


size_t ConfigShorthandParser::ShortHandStringContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleShortHandString;
}


ConfigShorthandParser::ShortHandStringContext* ConfigShorthandParser::shortHandString() {
  ShortHandStringContext *_localctx = _tracker.createInstance<ShortHandStringContext>(_ctx, getState());
  enterRule(_localctx, 0, ConfigShorthandParser::RuleShortHandString);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(12);
    assignments();
    setState(13);
    match(ConfigShorthandParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentsContext ------------------------------------------------------------------

ConfigShorthandParser::AssignmentsContext::AssignmentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ConfigShorthandParser::AssignmentContext *> ConfigShorthandParser::AssignmentsContext::assignment() {
  return getRuleContexts<ConfigShorthandParser::AssignmentContext>();
}

ConfigShorthandParser::AssignmentContext* ConfigShorthandParser::AssignmentsContext::assignment(size_t i) {
  return getRuleContext<ConfigShorthandParser::AssignmentContext>(i);
}


size_t ConfigShorthandParser::AssignmentsContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleAssignments;
}


ConfigShorthandParser::AssignmentsContext* ConfigShorthandParser::assignments() {
  AssignmentsContext *_localctx = _tracker.createInstance<AssignmentsContext>(_ctx, getState());
  enterRule(_localctx, 2, ConfigShorthandParser::RuleAssignments);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(20);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(15);
        antlrcpp::downCast<AssignmentsContext *>(_localctx)->assignmentContext = assignment();
        antlrcpp::downCast<AssignmentsContext *>(_localctx)->listOfAssignments.push_back(antlrcpp::downCast<AssignmentsContext *>(_localctx)->assignmentContext);
        setState(16);
        match(ConfigShorthandParser::T__0); 
      }
      setState(22);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(23);
    antlrcpp::downCast<AssignmentsContext *>(_localctx)->assignmentContext = assignment();
    antlrcpp::downCast<AssignmentsContext *>(_localctx)->listOfAssignments.push_back(antlrcpp::downCast<AssignmentsContext *>(_localctx)->assignmentContext);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

ConfigShorthandParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigShorthandParser::AssignmentContext::NAME() {
  return getToken(ConfigShorthandParser::NAME, 0);
}

ConfigShorthandParser::ContentContext* ConfigShorthandParser::AssignmentContext::content() {
  return getRuleContext<ConfigShorthandParser::ContentContext>(0);
}


size_t ConfigShorthandParser::AssignmentContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleAssignment;
}


ConfigShorthandParser::AssignmentContext* ConfigShorthandParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, ConfigShorthandParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    match(ConfigShorthandParser::NAME);
    setState(26);
    match(ConfigShorthandParser::T__1);
    setState(27);
    content();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectContext ------------------------------------------------------------------

ConfigShorthandParser::ObjectContext::ObjectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ConfigShorthandParser::AssignmentsContext* ConfigShorthandParser::ObjectContext::assignments() {
  return getRuleContext<ConfigShorthandParser::AssignmentsContext>(0);
}


size_t ConfigShorthandParser::ObjectContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleObject;
}


ConfigShorthandParser::ObjectContext* ConfigShorthandParser::object() {
  ObjectContext *_localctx = _tracker.createInstance<ObjectContext>(_ctx, getState());
  enterRule(_localctx, 6, ConfigShorthandParser::RuleObject);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29);
    match(ConfigShorthandParser::T__2);
    setState(30);
    assignments();
    setState(31);
    match(ConfigShorthandParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListContext ------------------------------------------------------------------

ConfigShorthandParser::ListContext::ListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ConfigShorthandParser::ContentContext *> ConfigShorthandParser::ListContext::content() {
  return getRuleContexts<ConfigShorthandParser::ContentContext>();
}

ConfigShorthandParser::ContentContext* ConfigShorthandParser::ListContext::content(size_t i) {
  return getRuleContext<ConfigShorthandParser::ContentContext>(i);
}


size_t ConfigShorthandParser::ListContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleList;
}


ConfigShorthandParser::ListContext* ConfigShorthandParser::list() {
  ListContext *_localctx = _tracker.createInstance<ListContext>(_ctx, getState());
  enterRule(_localctx, 8, ConfigShorthandParser::RuleList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(33);
    match(ConfigShorthandParser::T__4);
    setState(39);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(34);
        antlrcpp::downCast<ListContext *>(_localctx)->contentContext = content();
        antlrcpp::downCast<ListContext *>(_localctx)->listElement.push_back(antlrcpp::downCast<ListContext *>(_localctx)->contentContext);
        setState(35);
        match(ConfigShorthandParser::T__0); 
      }
      setState(41);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(42);
    antlrcpp::downCast<ListContext *>(_localctx)->contentContext = content();
    antlrcpp::downCast<ListContext *>(_localctx)->listElement.push_back(antlrcpp::downCast<ListContext *>(_localctx)->contentContext);
    setState(43);
    match(ConfigShorthandParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContentContext ------------------------------------------------------------------

ConfigShorthandParser::ContentContext::ContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ConfigShorthandParser::ContentContext::LITERAL() {
  return getToken(ConfigShorthandParser::LITERAL, 0);
}

ConfigShorthandParser::ListContext* ConfigShorthandParser::ContentContext::list() {
  return getRuleContext<ConfigShorthandParser::ListContext>(0);
}

ConfigShorthandParser::ObjectContext* ConfigShorthandParser::ContentContext::object() {
  return getRuleContext<ConfigShorthandParser::ObjectContext>(0);
}


size_t ConfigShorthandParser::ContentContext::getRuleIndex() const {
  return ConfigShorthandParser::RuleContent;
}


ConfigShorthandParser::ContentContext* ConfigShorthandParser::content() {
  ContentContext *_localctx = _tracker.createInstance<ContentContext>(_ctx, getState());
  enterRule(_localctx, 10, ConfigShorthandParser::RuleContent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ConfigShorthandParser::LITERAL: {
        enterOuterAlt(_localctx, 1);
        setState(45);
        match(ConfigShorthandParser::LITERAL);
        break;
      }

      case ConfigShorthandParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(46);
        list();
        break;
      }

      case ConfigShorthandParser::T__2: {
        enterOuterAlt(_localctx, 3);
        setState(47);
        object();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void ConfigShorthandParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  configshorthandParserInitialize();
#else
  ::antlr4::internal::call_once(configshorthandParserOnceFlag, configshorthandParserInitialize);
#endif
}
